# byos-queuer

./: .gitignore  Cargo.toml  Dioxus.toml  README.md  bun.lockb  index.html  input.css  justfile  package.json
assets/: tailwind.css
src/: cancellable_timer.rs  handle.rs  job.rs  lib.rs  lifecycle.rs  main.rs  modifications.rs  on_update.rs  proteins.rs  queue.rs  samples.rs  state.rs  worker_pool.rs  workflow.rs
src/components/: base_workflow.rs  clear_queue.rs  delete.rs  delete_icon.rs  delete_job.rs  file_path_picker.rs  group_samples.rs  header.rs  job.rs  job_queue.rs  job_status_badge.rs  jobs.rs  launch_interval.rs  maximum_concurrent_jobs.rs  mod.rs  modifications_file.rs  new_icon.rs  new_job.rs  new_job_button.rs  new_job_modal.rs  optionally_valid_input.rs  output_directory.rs  protein_file.rs  reset.rs  reset_icon.rs  reset_job.rs  reset_queue.rs  run_bar.rs  run_button.rs  run_timer.rs  sample_files.rs  settings_button.rs  settings_icon.rs  settings_modal.rs  status_badge.rs  top_bar.rs  working_directory.rs
tests/data/: PG Monomers.wflw  modifications.txt  proteins.fasta  proteins.txt
tests/data/output/: Reference PG Monomers (WT, 6ldt; proteins.fasta; modifications.txt).wflw
